[HALX86:DMA] Fix limitation of Scatter/Gather memory allocation CORE-20565